# PKU-HR6_basic_coding

beginner_tutorials/: .package.xml.swp  CMakeLists.txt  package.xml
beginner_tutorials/src/: calculate.py  record.cpp
move_rand/: CMakeLists.txt  package.xml
move_rand/include/: example.hpp
move_rand/src/: cpp-capture_getdata.cpp  cpp-capture_getdata1.cpp  cpp-capture_test.cpp
my_dynamixel_tutorial/: CMakeLists.txt  Untitled Document  controller_manager.launch  package.xml  start_body_controller.launch  start_head_controller.launch  start_tilt_controller.1.launch  start_tilt_controller.2.launch  start_tilt_controller.launch  start_tilt_controller_backup.launch  tilt.1.yaml  tilt.3-1.yaml  tilt.yaml  tilt_backup.yaml
my_dynamixel_tutorial/src/: RArm_Driver-set.cpp  RArm_Driver.cpp  RArm_Driver1.cpp  init_robot_joint_state.cpp
my_pcl_tutorial/: package.xml
my_pcl_tutorial/src/: example.cpp
naoqi_msgs/: CMakeLists.txt
network/: CMakeLists.txt  RANGES.txt  exampleFM.txt  exampleIM.txt  nnFM.txt  nnIM.txt  nnPFM.txt  nnhPIM1.txt  nnhPIM2.txt  nnhPIM3.txt  nnhPIM4.txt  package.xml  saeHb.txt  saeHf.txt  saeNb.txt  saeNf.txt  saeQ1b.txt  saeQ1f.txt  saeQ2b.txt  saeQ2f.txt  saeQ3b.txt  saeQ3f.txt  saeQ4b.txt  saeQ4f.txt  saeQ5b.txt  saeQ5f.txt  saeQ6b.txt  saeQ6f.txt
network/include/: NN.h
network/msg/: RArm_msgs.msg
network/network_old 6.1/: nnPFM.txt  nnhPIM1.txt  nnhPIM2.txt  nnhPIM3.txt  nnhPIM4.txt  saeHb.txt  saeHf.txt  saeNb.txt  saeNf.txt  saeQ1b.txt  saeQ1f.txt  (+10 more)
realsense_camera-master/: CMakeLists.txt  package.xml
test_detect/: test.py
(+58 files in other folders)
